--- a/montaj.css
+++ b/montaj.css
@@ -1,80 +1,689 @@
-.montajBg {
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
+.mainDiv {
+  width: 1240px;
+  margin: 0px auto;
   background-color: #e8f1f5;
+  border-radius: 24.31px;
+  padding-bottom: 20px;
 }
-.montajbtn {
-  background-color: #e50f25 !important;
-  color: white;
-}
-.montajbtn:hover {
-  background-color: #e50f25 !important;
-  color: white;
+.hospitalArea {
+  padding: 25px;
 }
 
-.montajprofile-picture img {
-  width: 145.69px;
-  height: 145.69px;
+/* topArea start */
+.topArea {
+  display: grid;
+  grid-template-columns: 40% 60%;
+
+  .imgArea {
+    img {
+      width: 382.94px;
+      height: 285.69px;
+    }
+  }
+  .calendarArea {
+    width: 653.84px;
+    background-color: white;
+    display: grid;
+    border-radius: 24.31px;
+    grid-template-columns: 57% 43%;
+    height: 283.08px;
+    .calLeft {
+      padding: 20px 20px 0px 20px;
+    }
+    .calLeft {
+      img {
+        width: 379.29px;
+        height: 276.1px;
+      }
+    }
+    .calRight {
+      img {
+        width: 313.22px;
+        height: 316.08px;
+        transform: translate(0px, -17px);
+      }
+    }
+  }
 }
-.montajCalendarArea {
-  .calendar-title {
-    background-color: white !important;
+/* topArea end */
+/* secondArea start  */
+
+.secondArea {
+  display: grid;
+  grid-template-columns: 40% 60%;
+
+  .leftArea {
+    .heading {
+      h3 {
+        font-family: "Inter", sans-serif;
+        font-weight: 600;
+        font-size: 24.31px;
+        line-height: 27.96px;
+        margin: 10px 0;
+      }
+    }
+    .location {
+      display: flex;
+      gap: 10px;
+      align-items: top;
+      img {
+        width: 11.37px;
+      }
+      p {
+        font-family: "Inter", sans-serif;
+        font-size: 17.02px;
+        color: black;
+        line-height: 24.31px;
+        font-weight: 400;
+      }
+    }
+
+    .gpArea {
+      p {
+        font-family: "Open Sans", sans-serif;
+        font-weight: 600;
+        font-size: 12.16px;
+        line-height: 17.02px;
+        margin: 6px 0;
+      }
+    }
+
+    .starArea {
+      img {
+        width: 144.66px;
+        height: 21.88px;
+        margin: 6px 0;
+      }
+    }
+    .ratingArea {
+      p {
+        font-family: "Open Sans", sans-serif;
+        font-weight: 600;
+        font-size: 12.16px;
+        line-height: 17.02px;
+        color: rgba(0, 150, 136, 1);
+      }
+    }
+    .buttonArea {
+      display: flex;
+      margin-top: 20px;
+      gap: 25px;
+      .mybtn {
+        a {
+          background: rgba(229, 15, 37, 1);
+          border-radius: 9.73px;
+          padding: 12.16px 19.45px;
+          color: white;
+          font-family: "Inter", sans-serif;
+          font-size: 19.45px;
+          line-height: 29.18px;
+          font-weight: 600;
+          display: inline-block;
+          cursor: pointer;
+
+          img {
+            width: 17.02px;
+          }
+        }
+      }
+    }
+  }
+
+  .rightArea {
+    .appointmentArea {
+      width: 653.84px;
+      background-color: white;
+      border-radius: 24.31px;
+      padding: 30px;
+      margin-top: 30px;
+
+      .headingArea {
+        h3 {
+          font-family: "Inter", sans-serif;
+          font-weight: 600;
+          font-size: 29.18px;
+          line-height: 43.34px;
+          margin-bottom: 25px;
+        }
+      }
+      .btnArea {
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+        align-items: center;
+        button {
+          width: 152.22px;
+          height: 62.94px;
+          border-radius: 12.16px;
+          background: rgba(232, 241, 245, 1);
+          font-family: "Inter", sans-serif;
+          font-weight: 400;
+          font-size: 19.45px;
+          line-height: 34.04px;
+          img {
+            width: 29.18px;
+            transform: translateY(-3px);
+          }
+        }
+      }
+    }
   }
 }
 
-.montajAppointmentArea {
-  background-color: white;
-  margin-top: 20px;
-  border-radius: 13px;
-  padding: 15px;
+/* secondArea end  */
+
+/* single doctor Area start*/
+
+/* Hide the element initially */
+.singleDoctorArea {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-out;
 }
 
-.montajAppointmentArea headingArea h3 {
-  font-size: 29.18px;
-  font-weight: 600;
-  font-family: ital;
+/* Show the element when it has the 'show' class */
+.singleDoctorArea.show {
+  max-height: 1000px; /* Adjust as needed based on content height */
 }
-.buttonArea {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
-  margin-top: 10px;
+.singleDoctorArea {
+
+  .heading {
+    h2 {
+      font-family: "Inter", sans-serif;
+      font-weight: 600;
+      font-size: 24.31px;
+      line-height: 27.96px;
+      margin: 30px 0 10px 25px;
+      color: rgba(0, 150, 136, 1);
+    }
+  }
+  .memberArea {
+    background-color: white;
+    margin: 8px;
+    padding: 3px 10px 10px 10px;
+    border-radius: 24.31px;
+    box-shadow: 0px 4.86px 4.86px 0px #00000040;
+
+    .singleDoctorTop {
+      margin-top: 13px;
+
+      .calendarArea {
+        background-color: #e8f1f5;
+      }
+    }
+    .secondArea {
+      display: grid;
+      grid-template-columns: 40% 60%;
+      .rightArea {
+        .appointmentArea {
+          width: 653.84px;
+          background: #e8f1f5;
+          .btnArea {
+            button {
+              background-color: white;
+            }
+          }
+        }
+      }
+    }
+  }
 }
-.buttonAreabtn {
-  font-family: ital;
-  padding: 10px;
-  border-radius: 6px;
-  border: none;
+
+/* single doctor Area end*/
+
+@media (max-width: 1250px) {
+  .mainDiv {
+    width: 1024px;
+    padding-bottom: 20px;
+  }
+
+  /* topArea start */
+  .topArea {
+    display: grid;
+    grid-template-columns: 37% 60%;
+    align-items: flex-start;
+
+    .imgArea {
+      img {
+        width: 320.94px;
+        height: 256.69px;
+        transform: translateY(-3px);
+      }
+    }
+    .calendarArea {
+      width: 615.84px;
+      background-color: white;
+      display: grid;
+      border-radius: 24.31px;
+      grid-template-columns: 57% 43%;
+      height: 255px;
+      .calLeft {
+        padding: 0px 0px 0px 10px;
+      }
+      .calLeft {
+        img {
+          width: 310.29px;
+          height: 276.1px;
+        }
+      }
+      .calRight {
+        width: 250px;
+
+        img {
+          width: 250.22px;
+
+          transform: translate(15px, -31px);
+        }
+      }
+    }
+  }
+  /* topArea end */
+
+  .secondArea {
+    display: grid;
+    grid-template-columns: 37% 62%;
+
+    .leftArea {
+      .buttonArea {
+        display: flex;
+        gap: 20.16px;
+        .btn {
+          a {
+            padding: 9.16px 15.45px;
+            font-size: 15.45px;
+            font-weight: 600;
+
+            img {
+              width: 15.02px;
+            }
+          }
+        }
+      }
+    }
+    .rightArea {
+      .appointmentArea {
+        width: 619.84px;
+        background-color: white;
+        border-radius: 24.31px;
+        padding: 30px;
+        margin-top: 30px;
+      }
+    }
+  }
+
+  /* single doctor Area start*/
+  .singleDoctorArea {
+    .heading {
+      h2 {
+        font-family: "Inter", sans-serif;
+        font-weight: 600;
+        font-size: 24.31px;
+        line-height: 27.96px;
+        margin: 30px 0 10px 25px;
+        color: rgba(0, 150, 136, 1);
+      }
+    }
+    .memberArea {
+      background-color: white;
+      margin: 8px;
+      padding: 3px 10px 10px 10px;
+      border-radius: 24.31px;
+      box-shadow: 0px 4.86px 4.86px 0px #00000040;
+
+      .singleDoctorTop {
+        margin-top: 13px;
+
+        .calendarArea {
+          background-color: #e8f1f5;
+        }
+      }
+      .secondArea {
+        display: grid;
+        grid-template-columns: 37% 62%;
+        .rightArea {
+          .appointmentArea {
+            width: 619.84px;
+            background: #e8f1f5;
+            .btnArea {
+              button {
+                background-color: white;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  /* single doctor Area end*/
+}
+
+/* this for Mobile start */
+
+.mobile_mainDiv {
+  width: 95%;
+  margin: 0 auto;
+  padding: 20px;
   background-color: #e8f1f5;
-}
-.clockImg {
-  width: 16px !important;
-  margin-right: 5px;
-  transform: translateY(-1px);
-}
-.MontajMemberOFIbneSinha {
-  margin-top: 20px;
-  color: rgba(0, 150, 136, 1);
-  font-size: 24.31px;
-  font-weight: 600;
+
+  .mobile_hospitalArea {
+    .mobile_topArea {
+      .mobile_imgArea {
+        width: 100%;
+        margin: 0 auto;
+        img {
+          width: 100%;
+        }
+      }
+    }
+    .mobile_bottomArea {
+      margin-top: 30px;
+
+      .heading {
+        h3 {
+          font-family: "Inter", sans-serif;
+          font-weight: 600;
+          font-size: 2rem;
+          margin-bottom: 10px;
+        }
+      }
+      .mobile_location {
+        display: flex;
+        gap: 15px;
+        img {
+          width: 20px;
+        }
+        p {
+          font-family: "Inter", sans-serif;
+          font-size: 15px;
+          color: black;
+          font-weight: 400;
+        }
+      }
+
+      .mobile_gpArea {
+        p {
+          font-family: "Inter", sans-serif;
+          font-size: 15px;
+          color: black;
+          font-weight: 400;
+          margin-bottom: 10px;
+        }
+      }
+      .mobile_starArea {
+        img {
+          width: 250px;
+          margin: 10px 0;
+        }
+      }
+      .mobile_ratingArea {
+        p {
+          font-family: "Inter", sans-serif;
+          font-size: 15px;
+          color: #009688;
+
+          font-weight: 400;
+          margin-bottom: 10px;
+        }
+      }
+      .mobile_buttonArea {
+        display: flex;
+        margin: 25px 0;
+        gap: 30.16px;
+        .mybtn {
+          a {
+            background: rgba(229, 15, 37, 1);
+            border-radius: 9.73px;
+            padding: 12.16px 19.45px;
+            color: white;
+            font-family: "Inter", sans-serif;
+            font-size: 19.45px;
+            line-height: 29.18px;
+            font-weight: 600;
+            display: inline-block;
+            cursor: pointer;
+
+            img {
+              width: 17.02px;
+            }
+          }
+        }
+      }
+    }
+    .mobile_singleDoctorArea {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.5s ease-out;
+    }
+    
+    /* Show the mobile element when it has the 'show' class */
+    .mobile_singleDoctorArea.show {
+      max-height: 1000px; /* Adjust as needed based on content height */
+    }
+    .mobile_singleDoctorArea {
+      .heading {
+        h2 {
+          color: #009688;
+        }
+      }
+      .mobile_memberArea {
+        background-color: white;
+        margin-top: 8px;
+        padding: 10px;
+        border-radius: 24.31px;
+        box-shadow: 0px 4.86px 4.86px 0px #00000040;
+
+        .imgArea img {
+          width: 100%;
+        }
+      }
+    }
+
+    .mobile_secondArea {
+      .mobile_calendarArea {
+        background: #ffffff;
+
+        margin-top: 30px;
+        border-radius: 24px;
+        .mobile_calLeft {
+          img {
+            width: 100%;
+          }
+        }
+        .mobile_calRight {
+          img {
+            width: 100%;
+            border-radius: 0px 0px 24px 24px;
+            transform: translate(0px, 3px);
+          }
+        }
+      }
+
+      .mobile_rightArea {
+        .appointmentArea {
+          background: white;
+          border-radius: 24px;
+          padding: 20px;
+          margin: 20px 0;
+
+          .headingArea {
+            h3 {
+              font-family: "Inter", sans-serif;
+              font-weight: 600;
+              font-size: 25.18px;
+              line-height: 43.34px;
+              margin-bottom: 25px;
+            }
+          }
+
+          .btnArea {
+            display: flex;
+            gap: 20px;
+            flex-wrap: wrap;
+            align-items: center;
+            button {
+              width: 152.22px;
+              height: 62.94px;
+              border-radius: 12.16px;
+              background: #e8f1f5;
+              font-family: "Inter", sans-serif;
+              font-weight: 400;
+              font-size: 19.45px;
+              line-height: 34.04px;
+              img {
+                width: 29.18px;
+                transform: translateY(6px);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
-.singleAppointmentArea {
-  background-color: #e8f1f5;
-  margin-top: 20px;
-  border-radius: 13px;
-  padding: 15px;
+@media (max-width: 1024px) {
+  .mainDiv {
+    display: none;
+  }
+  .mobile_mainDiv {
+    display: block;
+  }
 }
-.singleMemberbuttonAreabtn {
-  font-family: ital;
-  padding: 10px;
-  border-radius: 6px;
-  border: none;
-  background-color: #fff;
+@media (min-width: 1024px) {
+  .mainDiv {
+    display: block;
+  }
+  .mobile_mainDiv {
+    display: none;
+  }
 }
 
-.singleMemberProfile-picture img {
-  height: 300px;
-}
+@media (max-width: 600px) {
+  .mobile_mainDiv {
+    .mobile_hospitalArea {
+      .mobile_bottomArea {
+        .heading {
+          h3 {
+            font-size: 25px;
+          }
+        }
+        .mobile_location {
+          p {
+            font-family: "Inter", sans-serif;
+            font-size: 12px;
+            color: black;
+          }
+        }
 
-.singleMemberBg {
-  background-color: #fff !important;
+        .mobile_gpArea {
+          p {
+            color: black !important;
+          }
+        }
+        .mobile_starArea {
+          img {
+            width: 150px;
+            margin: 10px 0;
+          }
+        }
+
+        .mobile_buttonArea {
+          display: flex;
+          margin: 25px 0;
+          gap: 10.16px;
+          .btn {
+            padding: 0;
+            a {
+              padding: 5.16px 10.45px;
+
+              font-size: 12.45px;
+
+              img {
+                width: 15.02px;
+              }
+            }
+          }
+        }
+      }
+      .mobile_singleDoctorArea {
+        .heading {
+          h2 {
+            color: #009688;
+            font-size: 15px;
+          }
+        }
+        .mobile_memberArea {
+          background-color: white;
+          margin-top: 8px;
+          padding: 10px;
+          border-radius: 24.31px;
+          box-shadow: 0px 4.86px 4.86px 0px #00000040;
+
+          .imgArea img {
+            width: 100%;
+          }
+        }
+      }
+
+      .mobile_secondArea {
+        .mobile_calendarArea {
+          background: #ffffff;
+
+          margin-top: 30px;
+          border-radius: 24px;
+          .mobile_calLeft {
+            img {
+              width: 100%;
+            }
+          }
+          .mobile_calRight {
+            img {
+              width: 100%;
+              border-radius: 0px 0px 24px 24px;
+              transform: translate(0px, 3px);
+            }
+          }
+        }
+
+        .mobile_rightArea {
+          .appointmentArea {
+            background: white;
+            border-radius: 24px;
+            padding: 20px;
+            margin: 20px 0;
+
+            .headingArea {
+              h3 {
+              
+                font-size: 18.18px;
+                
+              }
+            }
+
+            .btnArea {
+              
+              button {
+                width: 152.22px;
+                height: 62.94px;
+                border-radius: 12.16px;
+                background: #e8f1f5;
+                font-family: "Inter", sans-serif;
+                font-weight: 400;
+                font-size: 19.45px;
+                line-height: 34.04px;
+                img {
+                  width: 19.18px;
+                  transform: translateY(-2px);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
+/* this for Mobile end */
